--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ahmedsaoud31/laravel-permission-to-vuejs": "dev-master",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.28",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.3",
+        "theanik/laravel-more-command": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
