--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ahmedsaoud31/laravel-permission-to-vuejs": "dev-master",
         "bensampo/laravel-enum": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
+        "imfaisii/laravel-model-status": "^1.3",
         "laravel/breeze": "^1.28",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
