--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-deleted-models": "^1.0",
         "spatie/laravel-permission": "^6.3",
         "spatie/laravel-query-builder": "^5.7",
         "theanik/laravel-more-command": "^1.3"
