--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "ahmedsaoud31/laravel-permission-to-vuejs": "dev-master",
         "bensampo/laravel-enum": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
-        "imfaisii/laravel-model-status": "^1.4",
+        "imfaisii/laravel-model-status": "^1.3",
         "laravel/breeze": "^1.28",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
@@ -51,7 +51,8 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan db:seed --class=Database\\Seeders\\PermissionSeeder"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
