--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
-            "@php artisan db:seed --class=Database\\Seeders\\PermissionSeeder"
+            "@php artisan db:seed --class=PermissionSeeder"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
