--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-deleted-models": "^1.0",
         "spatie/laravel-permission": "^6.3",
