--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "opcodesio/log-viewer": "^3.4",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-backup": "^8.6",
         "spatie/laravel-deleted-models": "^1.0",
