--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 DROPBOX_CLIENT_ID=
 DROPBOX_CLIENT_SECRET=
 DROPBOX_REFRESH_TOKEN=
+
+LOG_SLACK_WEBHOOK_URL=
