--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,10 +1,10 @@
-name: Laravel
+name: MEGCRM
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop" ]
 
 jobs:
   laravel-tests:
