--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,9 +7,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
         with:
           php-version: '8.3'
+      - uses: actions/checkout@v3
       - name: Copy .env
         run: cp .env.example .env
       - name: Install composer Dependencies
