--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: craftech-io/slack-action@v1
       with:
         slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        message: "Backend Code Deployment in progress."
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.3'
@@ -40,3 +41,9 @@ jobs:
           git pull
           composer i
           php artisan migrate --force
+    - name: Send Success Notification
+      if: always()
+      uses: craftech-io/slack-action@v1
+      with:
+        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        message: "The workflow has succeeded."
