--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,11 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: craftech-io/slack-action@v1
+    - uses: slackapi/slack-github-action@v1.25.0
       with:
-        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-        message: "Backend Code Deployment in progress."
-        status: "success"
+        payload: |
+          {
+            "key": "value",
+            "foo": "bar"
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.3'
