--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,7 +14,10 @@ jobs:
     steps:
     - uses: slackapi/slack-github-action@v1.25.0
       with:
-        slack-message: "MEGCRM Backend deployment in progress."
+       payload: |
+        {
+          "text": "GitHub Action build result:",
+        }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
