--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,6 +16,7 @@ jobs:
       with:
        payload: |
         {
+          "status": "success",
           "text": "GitHub Action build result"
         }
       env:
