--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,11 +16,11 @@ jobs:
       with:
        payload: |
         {
-          "status": "success",
           "text": "GitHub Action build result"
         }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        status: "success"
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.3'
