--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,22 +15,18 @@ jobs:
     - uses: slackapi/slack-github-action@v1.25.0
       with:
         payload: |
-          {
-            "text": "Deployment finished (Completed)",
-            "attachments": [
               {
-                "pretext": "Deployment finished",
-                "color": "28a745",
-                "fields": [
+                "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+                "blocks": [
                   {
-                    "title": "Status",
-                    "short": true,
-                    "value": "Completed"
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                    }
                   }
                 ]
               }
-            ]
-          }
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
