--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -59,3 +59,4 @@ jobs:
       uses: craftech-io/slack-action@v1
       with:
         slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        text: "my test"
