--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,23 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: slackapi/slack-github-action@v1.25.0
+    - name: Send In Progress Notification
+      if: always()
+      uses: imfaisii/slack-action@v1
       with:
-        payload: |
-              {
-                "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
-                "blocks": [
-                  {
-                    "type": "section",
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-                    }
-                  }
-                ]
-              }
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        status: "started"
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.3'
@@ -56,7 +45,7 @@ jobs:
           php artisan migrate --force
     - name: Send Success Notification
       if: always()
-      uses: craftech-io/slack-action@v1
+      uses: imfaisii/slack-action@v1
       with:
         slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-        text: "my test"
+        status: "success"
