--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/slack-notification-channel": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "mekras/php-speller": "^2.3",
         "opcodesio/log-viewer": "^3.4",
         "rappasoft/laravel-authentication-log": "^3.0",
         "spatie/laravel-activitylog": "^4.7",
@@ -28,6 +29,7 @@
         "spatie/laravel-permission": "^6.3",
         "spatie/laravel-query-builder": "^5.7",
         "theanik/laravel-more-command": "^1.3",
+        "tigitz/php-spellchecker": "^0.6.0",
         "torann/geoip": "^3.0"
     },
     "require-dev": {
