--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "ahmedsaoud31/laravel-permission-to-vuejs": "dev-master",
         "bensampo/laravel-enum": "^6.8",
+        "beyondcode/laravel-comments": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "imfaisii/laravel-model-status": "^1.3",
         "jenssegers/agent": "^2.6",
