--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+GET_ADDRESS_API_KEY=
+
 DROPBOX_CLIENT_ID=
 DROPBOX_CLIENT_SECRET=
 DROPBOX_REFRESH_TOKEN=
