--- a/package.json
+++ b/package.json
@@ -1,1 +1,9 @@
-{}
+{
+    "lint-staged": {
+        "**/*.php": "./vendor/bin/pint --preset laravel"
+    },
+    "devDependencies": {
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.2"
+    }
+}
