--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,9 @@ DROPBOX_CLIENT_SECRET=
 DROPBOX_REFRESH_TOKEN=
 
 LOG_SLACK_WEBHOOK_URL=
+
+VISA_DOCUMENTS_ALERT_EMAILS=
+COMPANY_DOCUMENTS_ALERT_EMAILS=
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
