--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "ahmedsaoud31/laravel-permission-to-vuejs": "dev-master",
+        "ajcastro/eager-load-pivot-relations": "^0.3.0",
         "bensampo/laravel-enum": "^6.8",
         "beyondcode/laravel-comments": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
