(wip): push notifications

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,4 @@ COMPANY_DOCUMENTS_ALERT_EMAILS=
 TWILIO_AUTH_TOKEN=
 TWILIO_ACCOUNT_SID=
 
+EXPONENT_PUSH_NOTIFICATION_INTERESTS_STORAGE_DRIVER=database
