--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ahmedsaoud31/laravel-permission-to-vuejs": "dev-master",
         "ajcastro/eager-load-pivot-relations": "^0.3.0",
         "aloha/twilio": "^5.0",
+        "alymosul/laravel-exponent-push-notifications": "^4.0",
         "bensampo/laravel-enum": "^6.8",
         "beyondcode/laravel-comments": "^1.4",
         "binarcode/laravel-mailator": "^5.2",
