--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,6 @@ APP_DEBUG=true
 APP_URL=http://localhost
 CUSTOMER_URL=http://localhost:5174
 
-
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -72,3 +71,7 @@ TWILIO_AUTH_TOKEN=
 TWILIO_ACCOUNT_SID=
 
 EXPONENT_PUSH_NOTIFICATION_INTERESTS_STORAGE_DRIVER=database
+
+AIRCALL_API_ID=
+AIRCALL_API_TOKEN=
+AIRCALL_WEBHOOK_TOKEN=
