--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -34,6 +34,7 @@ jobs:
             php artisan migrate --force
             php artisan optimize:clear
             php artisan config:cache
+            php artisan route:cache
             supervisorctl restart all
       - name: Send Success Notification
         if: success()
